--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p>
                         Type this to get style: <span id="cssNextRule"></span>
                     </p>
-                        <input type="text" id="cssInput" autocapitalize="off" autocomplete="off" spellcheck="false"> <input type="button" id="cssButton" value="Submit">
+                    <input type="text" id="cssInput" autocapitalize="off" autocomplete="off" spellcheck="false"> <input type="button" class="button" id="cssButton" value="Submit">
 
                 </div>
                 <br>
