--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             </div>
         </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="main.js"></script>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
