--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
             </div>
         </main>
+        <footer>
+            <a id="clearSave">Clear save data</a>
+        </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="js/main.js" type="module"></script>
     </body>
