Removed save data button, added game reset button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </main>
         <footer>
-            <a id="clearSave">Clear save data</a>
+            <a id="resetGame">Reset Game</a>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="js/main.js" type="module"></script>
