Update page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <!-- SEO: Descriptive title -->
-        <title>Ode to HTML - HTML Clicker: Build a website. Get lots of clicks.</title>
+        <title>HTML Clicker: Build a website. Get lots of clicks.</title>
         <!-- SEO: Unique meta description -->
         <meta name="description" content="A game which inaccurately simulates the work of a web developer.">
         <link rel="stylesheet" href="htmlclicker.css">
